docs(swagger): improve documentation
